# anime_list

./: .gitignore  Cargo.toml  DESIGN.md  README.md  anime_list.csv
src/: anime.rs  app.rs  args.rs  data.rs  main.rs
src/anime/: genre.rs  statuses.rs
