[package]
name = "anime_list"
version = "0.1.0"
edition = "2021"
authors = ["Yang Lorenzo"]
license = "MIT"
description = "A CLI tool to manage your anime list"
readme = "README.md"
keywords = ["anime", "list", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
csv = "1.1.6"
